boreal/tests/assets/invalid_files/parsing/jump_empty.yar
rule a {
    strings:
        $a = { AB [0] 0F }
    condition:
        $a
}
